# Case_Study_Olist

./: .gitattributes  .gitignore  README.md  pyproject.toml
data/interim/: olist_geolocation_zip_code_prefix_state_unique.csv
draft_notebook/data_analysis/: 01_sales.ipynb  02_items.ipynb  02_items_categorize.ipynb  03_customer.ipynb  04_reviews_basic_info.ipynb  04_reviews_category_analysis.ipynb  04_reviews_category_embedding.ipynb  04_reviews_ラベル分類.ipynb  05_delivery_status.ipynb  05_spanhours.ipynb  05_spanhours2.ipynb  05_spanhours3.ipynb
draft_notebook/data_process/: 01_merge_order_customer_info.ipynb  02_reviews_translation_labelling.ipynb  03_item.ipynb  04_merge_order_info.ipynb
draft_notebook/data_understanding/: 00_overview.ipynb  01_review.ipynb  02_customer_data.ipynb  03_seller.ipynb  04_order.ipynb  05_sales.ipynb
models/: best_lgbm_model.pickle
notebook/: process_data.ipynb
notebook/data_analysis/: 01_sales.ipynb  02_product_category.ipynb  03_geolocation.ipynb  04_1_review_basic_info.ipynb  04_1_review_category_analysis.ipynb  04_2_review_category_analysis.ipynb  04_3_review_content_check.ipynb  04_4_review_scoring_sentiment.ipynb  04_review_basic_info.ipynb  04_review_category_analysis.ipynb  04_review_category_analysis_2.ipynb  04_review_content_check.ipynb  04_review_scoring_posi_nega.ipynb  05_delivery_issue_analysis.ipynb  05_span_hours_pred.ipynb  06_span_hours_pred.ipynb  07_key_factors_check.ipynb
results/agg/: category_all.csv  category_issue.csv  category_praise.csv  delivery_issue_analysis_actual_describe.csv  fh_category_all.csv  (+16 more)
(+25 files in other folders)
