[project]
name = "ey-sat-lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "adjusttext>=1.3.0",
    "contractions>=0.1.73",
    "dotenv>=0.9.9",
    "folium>=0.19.5",
    "gensim>=4.3.2",
    "hdbscan>=0.8.40",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "japanize-matplotlib>=1.1.3",
    "jupter>=0.1.0",
    "lightgbm>=4.6.0",
    "lime>=0.2.0.1",
    "matplotlib>=3.10.1",
    "nltk>=3.9.1",
    "numba>=0.61.0",
    "numpy>=2.1.3",
    "openai>=1.65.4",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pdpbox>=0.3.0",
    "pip>=25.0.1",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "seaborn>=0.13.2",
    "sentence-transformers>=3.4.1",
    "shap>=0.47.1",
    "spacy>=3.8.4",
    "statsmodels>=0.14.4",
    "tqdm>=4.67.1",
    "transformers>=4.49.0",
    "umap-learn>=0.5.7",
]
